@@ -6,6 +6,7 @@
 
 #define FEATURE_4K_STORAGE_KEYS
 #define FEATURE_ACCESS_REGISTERS
+#define FEATURE_ADDRESS_LIMIT_CHECKING
 #define FEATURE_BASIC_FP_EXTENSIONS
 #define FEATURE_BIMODAL_ADDRESSING
 #define FEATURE_BINARY_FLOATING_POINT
