@@ -4,6 +4,7 @@
 /* This file MUST NOT contain #undef statements */
 #define FEATURE_4K_STORAGE_KEYS
 #define FEATURE_ACCESS_REGISTERS
+#define FEATURE_ADDRESS_LIMIT_CHECKING
 #define FEATURE_BASIC_FP_EXTENSIONS
 #define FEATURE_BIMODAL_ADDRESSING
 #define FEATURE_BINARY_FLOATING_POINT
