@@ -33,6 +33,7 @@
 
 #undef FEATURE_4K_STORAGE_KEYS
 #undef FEATURE_ACCESS_REGISTERS
+#undef FEATURE_ADDRESS_LIMIT_CHECKING
 #undef FEATURE_BASIC_FP_EXTENSIONS
 #undef FEATURE_BASIC_STORAGE_KEYS
 #undef FEATURE_BCMODE
