@@ -299,6 +299,7 @@ September 1999 issue of NaSPA Technical Support magazine. </P>
 <H4>What ESA/390 features are implemented?</H4>
 <P>The following standard features have been implemented: </P>
 <UL>
+<LI>Address-Limit Checking </LI>
 <LI>Commercial Instruction Set </LI>
 <LI>Decimal Instructions </LI>
 <LI>Hexadecimal Floating-Point Instructions </LI>
@@ -368,7 +369,6 @@ September 1999 issue of NaSPA Technical Support magazine. </P>
 <LI>Binary Floating-Point instructions </LI></UL>
 <P>The following optional features are partially implemented: </P>
 <UL>
-<LI>Address-Limit Checking </LI>
 <LI>Channel-Subsystem Call </LI>
 <LI>Coupling Support (Parallel Sysplex) [SIE only]</LI>
 <li>Extended Translation Facility 2
